syntax = "proto3";

message Cashflow {
    // message fields
    double interest_amount=1;
    double principal_amount=2;
    int64 date=3;
}
message AccountWithCashflows{
    string loan_account_no=1;
    int64 loan_id=2;
    string customer_id=3;
    int64 product_id=4;
    string product_desc=5;
    string product_type=6;
    string recovery_type=7;
    string cust_name=8;
    int64 disbursal_date=9;
    int64 due_day=10;
    int64 maturity_date=11;
    int64 original_tenure=12;
    int64 current_tenure=13;
    double balance_installments=14;
    string installment_type=15;
    string int_recry_freq=16;
    string principal_recry_freq=17;
    int64 days_past_due=18;
    string asset_clsfn=19;
    string int_type=20;
    double cust_int_rate=21;
    string rate_type=22;
    double overdue_prin_amount=23;
    double overdue_interest_amount=24;
    double os_prin=25;
    double emi_amount=26;
    double accrued_not_recieved_int=27;
    int64 last_payment_date=28;
    int64 next_instmt_due_date=29;
    int64 branch_id=30;
    string currency_code=31;
    string fraud=32;
    string restructure=33;
    double A1=34;
    double A2=35;
    double A3=36;
    double A4=37;
    double A5=38;
    double A6=39;
    double A7=40;
    int64 A8=41;
    int64 A9=42;
    int64 A10=43;
    int64 A11=44;
    int64 A12=45;
    int64 A13=46;
    int64 A14=47;
    string A15=48;
    string A16=49;
    string A17=50;
    string A18=51;
    string A19=52;
    string A20=53;
    string A21=54;
    string A22=55;
    string A23=56;
    string A24=57;
    string A25=58;
    string A26=59;
    string A27=60;
    string A28=61;
    string A29=62;
    string A30=63;
    string A31=64;
    string A32=65;
    string A33=66;
    string A34=67;
    string A35=68;
    int64 A36=69;
    int64 A37=70;
    int64 A38=71;
    int64 A39=72;
    int64 A40=73;
    double total_principal=74;
    double total_interest=75;
    repeated Cashflow cashflows=76;    
}
